--- a/lua/formatter_configs/.editorconfig
+++ b/lua/formatter_configs/.editorconfig
@@ -1,1 +1,8 @@
-../../.editorconfig
+root = true
+
+[*]
+indent_style = tab
+tab_width = 4
+trim_trailing_whitespace = true
+end_of_line = lf
+# 'lf' is used by Linux and MacOS, and 'crlf' is used by Windows
